Fixed routs contract
